--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<header><section class="centerbox"><h1><img src="images/lab.svg" alt="Developer" width="64" height="64"></h1><a href="http://kaiyuan.github.io">kaiyuan.github.io</a></section></header>
 	<article class="center">
-		<section class="centerbox"><p><img src="https://du26vw.blu.livefilestore.com/y1pTSd-U8iOjkSW3QBQrqtB0opEexu9wNM4qfIIjZ_GCbH26F0oEpK2DSppeVKPMYbDDuND2ozX_NSaJFMcfkkU9Q700C89Ch-I/bootstrap-footnotes-js-no-bootstrap-760.png" alt="Footnotes.js"></p>
+		<section class="centerbox"><p><img src="//du26vw.blu.livefilestore.com/y1pTSd-U8iOjkSW3QBQrqtB0opEexu9wNM4qfIIjZ_GCbH26F0oEpK2DSppeVKPMYbDDuND2ozX_NSaJFMcfkkU9Q700C89Ch-I/bootstrap-footnotes-js-no-bootstrap-760.png" alt="Footnotes.js"></p>
 
 			<h2><a href="bootstrap.footnotes.js/sup.html">Footnotes.js</a></h2>
 
@@ -23,7 +23,7 @@
 	</article>
 	<article class="center">
 		<section class="centerbox">
-			<p><img src="https://du26vw.blu.livefilestore.com/y1perEucdbZ6cNvMMKi_lDDIbkV1LYF2PPbYYlbu45g8seV94CdC84qRbC98rlrBiZhyp2qjdO6uUEhQaiE7ULPVnorRzvU6XDE/audio-bar-760.png" alt="Audio bar"></p>
+			<p><img src="//du26vw.blu.livefilestore.com/y1perEucdbZ6cNvMMKi_lDDIbkV1LYF2PPbYYlbu45g8seV94CdC84qRbC98rlrBiZhyp2qjdO6uUEhQaiE7ULPVnorRzvU6XDE/audio-bar-760.png" alt="Audio bar"></p>
 
 			<h2><a href="Audio-bar/">Audio bar</a></h2>
 
@@ -32,7 +32,7 @@
 	</article>
 	<article class="center">
 		<section class="centerbox">
-			<p><img src="https://du26vw.blu.livefilestore.com/y2p6M7vls24HY51DiHkdHSi7GhaQxenTHhbITt7pDtUYheaqAGCHDMaSV6vWePeVZoR387Rg4v_x1aFJc4XMgJ5P6u9y7SLiAqKqkTmg9ahdVk/keyboard-symbols%402x.png" alt="Keyboard symbols" width="100%"></p>
+			<p><img src="//du26vw.by3302.livefilestore.com/y2pU4QTqGALU0ii9m3d0UcfK0Vjt026igGh8z_0_5C7y_fLjXvKaqEYzcRiC9vZXKDehJEk6-tvrKhNWr46RPYWn3OukEl4PgC18KMaxRlU7LhS-S6qmterwXTViMa-adWD7yy7854rzVmyTfU0utWu3Q/Keyboard_symbols_2015_04_08.png" alt="Keyboard symbols" width="100%"></p>
 
 			<h2><a href="keyboard-symbols/">Keyboard symbols</a></h2>
 
@@ -67,7 +67,7 @@
 			by <a href="http://boxks.com">Kaiyuan</a>
 		</section>
 	</footer>
-	<div id="fork"><a href="https://github.com/Kaiyuan/Safari-Extensions">Fork on Github</a></div>
+	<div id="fork"><a href="https://github.com/Kaiyuan/kaiyuan.github.com">Fork on Github</a></div>
 <!--[if lte IE 9]>
 	<link rel="stylesheet" href="http://kaiyuan.github.io/killie/killie-noimg.css" title="text/css" media="screen"  />
 	<div class="killie">
