--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" type="text/css" href="css/museo-slab.css">
-	<link rel="stylesheet" type="text/css" href="bootstrap.footnotes.js/footnotes.css">
+	<link rel="stylesheet" type="text/css" href="jquery.footnotes.js/footnotes.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script type="text/javascript" charset="utf-8" src="bootstrap.footnotes.js/footnotes.js"></script>
+	<script type="text/javascript" charset="utf-8" src="jquery.footnotes.js/footnotes.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/script.js"></script>
 </head>
 <body>
